# pact-amd-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.rocm  LICENSE  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
src/pact/: __init__.py  __main__.py  bench.py  inference.py  protocol.py  router.py
tests/: test_protocol.py
