[project]
name = "pact"
version = "0.1.0"
description = "PACT: Protocol for Agent Compact Transfer — hybrid token-efficient routing agent"
authors = [
    { name = "Pact Contributors" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
amd = [
    "vllm>=0.6.0",
]
all = [
    "pact[dev,amd]",
]

[project.scripts]
pact = "pact.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
